--- a/src/org/cict/evaluation/missing-info.fxml
+++ b/src/org/cict/evaluation/missing-info.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -9,113 +10,103 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="vbox_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="vbox_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="432.0" prefWidth="460.0" style="-fx-background-color: #46CDAC;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="CENTER" prefHeight="117.0" prefWidth="600.0" style="-fx-background-color: #46AEDE;">
+      <VBox alignment="CENTER">
          <children>
             <Label text="Welcome!" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="29.0" />
+                  <Font name="System Bold" size="41.0" />
                </font>
             </Label>
-            <VBox>
+            <VBox alignment="CENTER">
                <children>
-                  <Label text="Please set the following to continue:" textFill="WHITE">
+                  <Label text="New Student Wizard" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="20.0" />
+                        <Font name="System Bold" size="25.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="10.0" />
+                     </padding>
                   </Label>
                </children>
-               <padding>
-                  <Insets left="20.0" />
-               </padding>
             </VBox>
          </children>
       </VBox>
-      <VBox alignment="CENTER" prefHeight="84.0" prefWidth="600.0" spacing="20.0">
+      <VBox alignment="CENTER" spacing="5.0">
          <children>
-            <HBox alignment="CENTER" spacing="10.0">
-               <children>
-                  <Label text="Curriculum: " textFill="#4e87e3">
-                     <font>
-                        <Font name="System Bold" size="23.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="cmb_curriculum" prefHeight="34.0" prefWidth="255.0">
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </ComboBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="40.0" spacing="10.0">
-               <children>
-                  <Label text="Year Level: " textFill="#4e87e3">
-                     <font>
-                        <Font name="System Bold" size="23.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="cmb_year_level" prefHeight="34.0" prefWidth="244.0">
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </ComboBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="57.0" spacing="10.0">
-               <children>
-                  <Label text="Section:" textFill="#4e87e3">
-                     <font>
-                        <Font name="System Bold" size="23.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txt_section" prefHeight="39.0" prefWidth="164.0">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </TextField>
-                  <Label text="Group:" textFill="#4e87e3">
-                     <font>
-                        <Font name="System Bold" size="23.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txt_group" layoutX="242.0" layoutY="10.0" prefHeight="39.0" prefWidth="77.0">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </TextField>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" spacing="10.0">
-               <children>
-                  <Label text="Admission Year:" textFill="#4e87e3">
-                     <font>
-                        <Font name="System Bold" size="23.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txt_adyear" prefHeight="39.0" prefWidth="130.0">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </TextField>
-               </children>
-            </HBox>
-         </children>
-         <VBox.margin>
-            <Insets top="20.0" />
-         </VBox.margin>
-      </VBox>
-      <VBox alignment="CENTER">
-         <children>
-            <Button fx:id="btn_proceed" mnemonicParsing="false" prefHeight="44.0" prefWidth="153.0" style="-fx-background-color: #56CFAA;" text="Proceed" textFill="WHITE">
+            <Label text="Curriculum" textFill="WHITE">
                <font>
-                  <Font size="20.0" />
+                  <Font name="System Bold" size="20.0" />
                </font>
-            </Button>
+            </Label>
+            <ComboBox fx:id="cmb_curriculum" prefHeight="25.0" prefWidth="255.0" style="-fx-background-color: white;">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </ComboBox>
+            <Label text="Year Level " textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="cmb_year_level" prefHeight="25.0" prefWidth="255.0" style="-fx-background-color: white;">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </ComboBox>
+            <HBox alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="255.0" spacing="10.0">
+               <children>
+                  <VBox HBox.hgrow="ALWAYS">
+                     <children>
+                        <Label prefWidth="150.0" text="Section" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txt_section">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </VBox>
+                  <VBox HBox.hgrow="ALWAYS">
+                     <children>
+                        <Label text="Group" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txt_group">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <JFXCheckBox fx:id="chk_cross" checkedColor="WHITE" text="Cross-Erollee" textFill="WHITE" unCheckedColor="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+               <padding>
+                  <Insets left="2.0" />
+               </padding>
+            </JFXCheckBox>
+            <JFXButton fx:id="btn_proceed" minWidth="40.0" prefHeight="40.0" prefWidth="242.0" style="-fx-border-color: white;" text="Continue" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </JFXButton>
          </children>
-         <VBox.margin>
-            <Insets bottom="10.0" top="30.0" />
-         </VBox.margin>
       </VBox>
    </children>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </VBox>
