--- a/src/org/cict/accountmanager/faculty/layout/faculty-home.fxml
+++ b/src/org/cict/accountmanager/faculty/layout/faculty-home.fxml
@@ -16,37 +16,40 @@
 
 <AnchorPane fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="604.0" prefWidth="1391.0" styleClass="metro-base-color" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox fx:id="hbox_tools" alignment="CENTER_LEFT" layoutX="21.0" layoutY="62.0" spacing="20.0" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="72.0">
+      <HBox alignment="CENTER_LEFT" layoutX="14.0" prefHeight="34.0" prefWidth="1391.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TextField fx:id="txt_search" prefHeight="34.0" prefWidth="380.0" promptText="Search full name or using BulSU ID" styleClass="metro-textbox-18" />
-            <JFXButton fx:id="btn_search" alignment="CENTER" contentDisplay="CENTER" text=" " textAlignment="CENTER">
-               <graphic>
-                  <ImageView fitHeight="34.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../src/images/Search_96px.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
-            <HBox alignment="CENTER_RIGHT" spacing="20.0" HBox.hgrow="ALWAYS">
+            <Label maxWidth="1.7976931348623157E308" prefHeight="58.0" prefWidth="448.0" styleClass="metro-title-1" text="Faculty Manager" HBox.hgrow="ALWAYS" />
+            <HBox fx:id="hbox_tools" alignment="CENTER_LEFT" style="-fx-border-color: #fff;">
                <children>
-                  <Label text="Sort by">
+                  <TextField fx:id="txt_search" prefHeight="28.0" prefWidth="380.0" promptText="Search for Name, ID or Department" style="-fx-background-color: #414852; -fx-text-fill: #fff;" styleClass="metro-textbox-18" />
+                  <JFXButton fx:id="btn_search" alignment="CENTER" contentDisplay="CENTER" text=" " textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../src/images/Search_96px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+               </children>
+               <HBox.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </HBox.margin>
+            </HBox>
+            <HBox alignment="CENTER_RIGHT" spacing="10.0">
+               <children>
+                  <Label text="Sort:">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="cmb_sort" prefHeight="34.0" prefWidth="228.0" styleClass="metro-combo-box" />
+                  <ComboBox fx:id="cmb_sort" prefHeight="28.0" prefWidth="117.0" styleClass="metro-combo-box" />
                </children>
                <padding>
                   <Insets right="10.0" />
                </padding>
             </HBox>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" layoutX="14.0" prefHeight="34.0" prefWidth="1391.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Label maxWidth="1.7976931348623157E308" prefHeight="19.0" prefWidth="1191.0" styleClass="metro-title-1" text="Faculty Manager" HBox.hgrow="ALWAYS" />
-            <JFXButton fx:id="btn_home" prefHeight="31.0" prefWidth="89.0" styleClass="metro-nav-button" text="Home">
+            <JFXButton fx:id="btn_home" prefHeight="46.0" prefWidth="259.0" styleClass="metro-nav-button" text="Home">
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -59,8 +62,7 @@
             <Insets left="20.0" right="30.0" top="10.0" />
          </padding>
       </HBox>
-      <VBox fx:id="vbox_info" layoutX="1378.0" layoutY="47.0" prefHeight="557.0" prefWidth="13.0" style="-fx-background-color: #fff;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="1378.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="47.0" />
-      <VBox fx:id="vbox_list" layoutX="21.0" layoutY="115.0" prefHeight="476.0" prefWidth="1352.0" styleClass="metro-table" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="120.0" />
+      <VBox fx:id="vbox_list" layoutX="21.0" layoutY="80.0" prefHeight="511.0" prefWidth="1340.0" styleClass="metro-table" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="80.0" />
       <AnchorPane fx:id="anchor_new_faculty" layoutX="-1.0" layoutY="108.0" prefHeight="496.0" prefWidth="1385.0" styleClass="metro-base-color" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="120.0">
          <children>
             <Label layoutX="49.0" layoutY="16.0" text="New Faculty">
