--- a/src/org/cict/accountmanager/faculty/layout/faculty-info.fxml
+++ b/src/org/cict/accountmanager/faculty/layout/faculty-info.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
@@ -13,7 +14,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <VBox fx:id="application_root" styleClass="metro-base-color" stylesheets="@metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -47,23 +47,43 @@
          <children>
             <VBox HBox.hgrow="ALWAYS">
                <children>
-                  <HBox alignment="CENTER" maxWidth="450.0">
+                  <HBox maxWidth="450.0">
                      <children>
                         <ImageView fitHeight="141.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../src/images/Account_96px.png" />
                            </image>
                         </ImageView>
+                        <VBox>
+                           <children>
+                              <Label fx:id="lbl_name" maxWidth="450.0" prefHeight="15.0" prefWidth="272.0" text="Joemar" wrapText="true">
+                                 <font>
+                                    <Font name="System Bold" size="25.0" />
+                                 </font>
+                                 <padding>
+                                    <Insets bottom="20.0" left="10.0" right="10.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="lbl_name1" maxWidth="450.0" prefHeight="0.0" prefWidth="272.0" text="Nucom" wrapText="true">
+                                 <font>
+                                    <Font name="System Bold" size="25.0" />
+                                 </font>
+                                 <padding>
+                                    <Insets bottom="20.0" left="10.0" right="10.0" />
+                                 </padding>
+                              </Label>
+                              <Label fx:id="lbl_name11" layoutX="10.0" layoutY="66.0" maxWidth="450.0" prefHeight="0.0" prefWidth="272.0" text="De La Cruz" wrapText="true">
+                                 <font>
+                                    <Font name="System Bold" size="25.0" />
+                                 </font>
+                                 <padding>
+                                    <Insets bottom="20.0" left="10.0" right="10.0" />
+                                 </padding>
+                              </Label>
+                           </children>
+                        </VBox>
                      </children>
                   </HBox>
-                  <Label fx:id="lbl_name" alignment="CENTER" maxWidth="450.0" text="asdassssssssssssssssssssssssssssssssssssssssssssssssssssssss" textAlignment="CENTER" wrapText="true">
-                     <font>
-                        <Font name="System Bold" size="25.0" />
-                     </font>
-                     <padding>
-                        <Insets bottom="20.0" left="10.0" right="10.0" />
-                     </padding>
-                  </Label>
                   <VBox maxWidth="450.0" spacing="5.0">
                      <children>
                         <HBox spacing="10.0">
@@ -137,6 +157,9 @@
                            </children>
                         </HBox>
                      </children>
+                     <VBox.margin>
+                        <Insets left="10.0" />
+                     </VBox.margin>
                   </VBox>
                   <VBox maxWidth="450.0" spacing="5.0">
                      <children>
@@ -161,6 +184,9 @@
                                  </font>
                               </Label>
                            </children>
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
                         </HBox>
                         <HBox spacing="10.0">
                            <children>
@@ -175,6 +201,9 @@
                                  </font>
                               </Label>
                            </children>
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
                         </HBox>
                         <HBox spacing="10.0">
                            <children>
@@ -194,8 +223,11 @@
                                  </HBox.margin>
                               </JFXCheckBox>
                            </children>
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
                         </HBox>
-                        <HBox alignment="CENTER">
+                        <HBox alignment="CENTER_LEFT">
                            <VBox.margin>
                               <Insets top="20.0" />
                            </VBox.margin>
@@ -210,6 +242,9 @@
                      </children>
                   </VBox>
                </children>
+               <HBox.margin>
+                  <Insets left="15.0" />
+               </HBox.margin>
             </VBox>
             <VBox spacing="15.0" HBox.hgrow="ALWAYS">
                <children>
@@ -311,7 +346,7 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txt_rank" accessibleText="txt_rank" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="221.0" style="-fx-border-color: #E4E4E4; -fx-text-fill: #434A55;" />
+                        <ComboBox fx:id="cmb_rank" prefHeight="25.0" prefWidth="275.0" styleClass="metro-combo-box" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="175.0" prefHeight="33.0" prefWidth="320.0" spacing="10.0">
@@ -321,7 +356,7 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txt_des" accessibleText="txt_designation" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="221.0" style="-fx-border-color: #E4E4E4; -fx-text-fill: #434A55;" />
+                        <ComboBox fx:id="cmb_des" prefHeight="25.0" prefWidth="275.0" styleClass="metro-combo-box" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="238.0" prefHeight="33.0" prefWidth="320.0" spacing="10.0">
@@ -331,21 +366,25 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txt_dept" accessibleText="txt_designation" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="221.0" style="-fx-border-color: #E4E4E4; -fx-text-fill: #434A55;" />
+                        <ComboBox fx:id="cmb_dept" prefHeight="25.0" prefWidth="275.0" styleClass="metro-combo-box" />
                      </children>
                   </HBox>
-                  <JFXButton fx:id="btn_save" accessibleText="btn_save_changes" maxHeight="-Infinity" prefHeight="42.0" prefWidth="200.0" style="-fx-border-color: #DEDEDE;" styleClass="label" text="Save Changes">
-                     <graphic>
-                        <ImageView fitHeight="20.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../src/images/Save%20as_32px.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </JFXButton>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <JFXButton fx:id="btn_save" accessibleText="btn_save_changes" maxHeight="-Infinity" prefHeight="42.0" prefWidth="200.0" style="-fx-border-color: #DEDEDE;" styleClass="label" text="Save Changes">
+                           <graphic>
+                              <ImageView fitHeight="20.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../src/images/Save%20as_32px.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </JFXButton>
+                     </children>
+                  </VBox>
                </children>
                <padding>
                   <Insets left="40.0" />
@@ -353,7 +392,7 @@
             </VBox>
             <StackPane alignment="TOP_CENTER">
                <HBox.margin>
-                  <Insets left="20.0" />
+                  <Insets left="25.0" />
                </HBox.margin>
                <children>
                   <VBox fx:id="vbox_disabled" maxHeight="-Infinity" spacing="10.0" style="-fx-border-color: white; -fx-background-color: #F96B85;" visible="false">
@@ -441,14 +480,14 @@
                   </VBox>
                   <VBox fx:id="vbox_faculty_tip" maxHeight="-Infinity" spacing="10.0" style="-fx-border-color: white;">
                      <children>
-                        <Label text="THIS IS A FACULTY TIP">
+                        <Label text="Tips You Must Know!">
                            <font>
                               <Font name="System Bold" size="26.0" />
                            </font>
                            <graphic>
                               <ImageView fitHeight="41.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../src/images/Unavailable_96px.png" />
+                                    <Image url="@images/Idea_96px.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -460,7 +499,7 @@
                                     <Image url="@../../src/images/Info_96px.png" />
                                  </image>
                               </ImageView>
-                              <Label prefWidth="504.0" text="TIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIP" wrapText="true">
+                              <Label prefWidth="504.0" text="Field with (*) is considered to be a required field. They must not be empty." wrapText="true">
                                  <font>
                                     <Font size="15.0" />
                                  </font>
@@ -477,7 +516,7 @@
                                     <Image url="@../../src/images/Info_96px.png" />
                                  </image>
                               </ImageView>
-                              <Label prefWidth="504.0" text="TIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIPTIP" wrapText="true">
+                              <Label prefWidth="504.0" text="You can use prefix words to search specific user in the faculty manager." wrapText="true">
                                  <font>
                                     <Font size="15.0" />
                                  </font>
@@ -487,21 +526,55 @@
                               <Insets left="30.0" />
                            </padding>
                         </HBox>
-                        <HBox spacing="10.0">
+                        <HBox layoutX="21.0" layoutY="111.0" spacing="10.0">
                            <children>
-                              <ImageView fitHeight="35.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="20.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../src/images/Info_96px.png" />
                                  </image>
                               </ImageView>
-                              <Label prefWidth="504.0" text="I am hidden when disable box is shown and the other way around" wrapText="true">
+                              <Label prefWidth="504.0" text="Prefix &quot;ID&quot;. Use this to search for a faculty's ID number. ( e.g. ID 12345 )" wrapText="true">
                                  <font>
                                     <Font size="15.0" />
                                  </font>
                               </Label>
                            </children>
                            <padding>
-                              <Insets left="30.0" />
+                              <Insets left="50.0" />
+                           </padding>
+                        </HBox>
+                        <HBox layoutX="21.0" layoutY="163.0" spacing="10.0">
+                           <children>
+                              <ImageView fitHeight="20.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../src/images/Info_96px.png" />
+                                 </image>
+                              </ImageView>
+                              <Label prefWidth="504.0" text="Prefix &quot;Department&quot; or &quot;Dept&quot;. Use this to search for a faculty's department where he/she belongs. ( e.g. Department BSIT )" wrapText="true">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <padding>
+                              <Insets left="50.0" />
+                           </padding>
+                        </HBox>
+                        <HBox layoutX="21.0" layoutY="194.0" spacing="10.0">
+                           <children>
+                              <ImageView fitHeight="20.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../src/images/Info_96px.png" />
+                                 </image>
+                              </ImageView>
+                              <Label prefWidth="504.0" text="No Prefix. If there is no prefix found, it will be considered as a faculty's name, so make sure to specify a prefix if needed." wrapText="true">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <padding>
+                              <Insets left="50.0" />
                            </padding>
                         </HBox>
                      </children>
@@ -513,11 +586,11 @@
             </StackPane>
          </children>
          <padding>
-            <Insets top="30.0" />
+            <Insets top="20.0" />
          </padding>
       </HBox>
    </children>
    <padding>
-      <Insets bottom="10.0" left="10.0" right="20.0" top="10.0" />
+      <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
    </padding>
 </VBox>
