--- a/src/org/cict/evaluation/missing-info.fxml
+++ b/src/org/cict/evaluation/missing-info.fxml
@@ -67,7 +67,7 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txt_section">
+                        <TextField fx:id="txt_section" alignment="CENTER">
                            <font>
                               <Font size="15.0" />
                            </font>
@@ -81,7 +81,7 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txt_group">
+                        <TextField fx:id="txt_group" alignment="CENTER">
                            <font>
                               <Font size="15.0" />
                            </font>
