--- a/src/org/cict/evaluation/encoder/GradeEncoder.fxml
+++ b/src/org/cict/evaluation/encoder/GradeEncoder.fxml
@@ -4,7 +4,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -30,7 +29,7 @@
          <children>
             <VBox prefHeight="200.0" prefWidth="350.0" style="-fx-background-color: #565656;">
                <children>
-                  <HBox maxHeight="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="202.0" prefWidth="400.0" style="-fx-background-color: red;" VBox.vgrow="ALWAYS">
+                  <HBox maxHeight="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="400.0" style="-fx-background-color: red;" VBox.vgrow="NEVER">
                      <children>
                         <VBox alignment="CENTER" prefHeight="202.0" prefWidth="180.0" style="-fx-background-color: white;">
                            <children>
@@ -39,12 +38,20 @@
                                     <Image url="@src/img/user.png" />
                                  </image>
                                  <VBox.margin>
-                                    <Insets left="10.0" right="10.0" top="10.0" />
+                                    <Insets />
                                  </VBox.margin>
                               </ImageView>
+                              <Label fx:id="lbl_stud_id" alignment="BOTTOM_CENTER" maxWidth="1.7976931348623157E308" text="2014113844" textAlignment="CENTER" textFill="#2c3e50">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </Label>
                            </children>
                         </VBox>
-                        <VBox layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="250.0" spacing="2.0" style="-fx-background-color: white;">
+                        <VBox layoutX="10.0" layoutY="10.0" prefWidth="250.0" spacing="2.0" style="-fx-background-color: white;">
                            <children>
                               <Label fx:id="lbl_lastname" text="Perello" textFill="#2c3e50">
                                  <font>
@@ -77,18 +84,6 @@
                         </VBox>
                      </children>
                   </HBox>
-                  <VBox prefHeight="41.0" prefWidth="400.0" style="-fx-background-color: #FFFFFF;">
-                     <children>
-                        <Label fx:id="lbl_stud_id" maxWidth="1.7976931348623157E308" prefHeight="60.0" prefWidth="175.0" text="2014113844" textFill="#2c3e50">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets left="10.0" />
-                           </VBox.margin>
-                        </Label>
-                     </children>
-                  </VBox>
                   <HBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="200.0" style="-fx-background-color: #3498DB;">
                      <children>
                         <Label alignment="BASELINE_CENTER" maxWidth="1.7976931348623157E308" text="GRADING SYSTEM" textFill="WHITE" HBox.hgrow="ALWAYS">
@@ -110,19 +105,6 @@
                         </JFXTreeTableView>
                      </children>
                   </HBox>
-                  <HBox layoutX="10.0" layoutY="360.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="400.0" style="-fx-background-color: #16A085;">
-                     <children>
-                        <Label alignment="BASELINE_CENTER" maxWidth="1.7976931348623157E308" style="-fx-background-color: #16A085;" text="PLEASE READ" textFill="WHITE" HBox.hgrow="ALWAYS">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
-                        </Label>
-                     </children>
-                     <padding>
-                        <Insets top="2.0" />
-                     </padding>
-                  </HBox>
-                  <ScrollPane focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="176.0" prefWidth="400.0" VBox.vgrow="ALWAYS" />
                </children>
                <HBox.margin>
                   <Insets />
@@ -156,7 +138,7 @@
                               </ImageView>
                               <VBox alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="480.0">
                                  <children>
-                                    <Label text="Loading all the student's subject" wrapText="true">
+                                    <Label text="Loading Subjects for Encoding" wrapText="true">
                                        <font>
                                           <Font name="System Bold" size="28.0" />
                                        </font>
