--- a/src/update2/org/cict/layout/curriculum/curriculum-info.fxml
+++ b/src/update2/org/cict/layout/curriculum/curriculum-info.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -98,6 +99,7 @@
                           <rowConstraints>
                               <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
                             <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -221,6 +223,15 @@
                                  </font>
                               </Label>
                               <ComboBox fx:id="cmb_preparatory" disable="true" layoutX="137.0" layoutY="196.0" prefHeight="35.0" prefWidth="303.0" style="-fx-background-color: #E2E2E2;" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                              <JFXCheckBox fx:id="chkbx_obsolete" checkedColor="#f9fcfa" prefHeight="21.0" prefWidth="91.0" styleClass="label" text="Obsolete in" unCheckedColor="#e2e2e2" GridPane.rowIndex="8">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                                 <GridPane.margin>
+                                    <Insets left="-10.0" />
+                                 </GridPane.margin>
+                              </JFXCheckBox>
+                              <ComboBox fx:id="cmb_obselete" disable="true" prefHeight="35.0" prefWidth="303.0" style="-fx-background-color: #E2E2E2;" GridPane.columnIndex="2" GridPane.rowIndex="8" />
                            </children>
                         </GridPane>
                      </children>
